# DevHub_Platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  START_PLATFORM.bat  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: asgi.py  celery.py  middleware.py  urls.py
core/settings/: base.py  dev.py  prod.py
design/: db_schema_v2.md
devhub_app/: admin.py  api.py  api_urls.py  apps.py  audit.py  consumers.py  filters.py  forms.py  jobs.py  mixins.py  models.py  models_user.py  permissions.py  serializers.py  services.py  signals.py  tests.py  throttling.py  urls.py  views.py
devhub_app/migrations/: 0001_initial.py  0002_alter_auditlog_action_alter_backgroundjob_job_type_and_more.py  0002_comment_notification.py  0002_relational_taxonomy.py  0003_audit_log.py  0004_background_job.py
plans/: ui_upgrades.md
static/: manifest.json  service-worker.js
static/css/: app.css  tailwind.css
static/js/: socket_client.js
templates/: 404.html  500.html
templates/devhub_app/: audit_logs.html  base.html  confirm_delete.html  dashboard.html  feed.html  landing.html  post_form.html  profile.html  project_detail.html  project_form.html  transactions.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt  (+1 more)
(+15 files in other folders)
